Fix pagination spacing on home carousel

--- a/frontend/app/styles/pages/_home.scss
+++ b/frontend/app/styles/pages/_home.scss
@@ -238,6 +238,10 @@
   .main-home-carousel {
     .swiper {
       aside:not(.side-panel), aside.not-side-panel {
+        bottom: 43px;
+        @include media($tablet-down) {
+          bottom: 0;
+        }
         h1 {
           font-size: 2.875em;
           @include media($tablet-down) {
